Përmirësime të shkronjave

--- a/faqet-tjera/afterlogin.html
+++ b/faqet-tjera/afterlogin.html
@@ -38,9 +38,9 @@
         <div class="gallery" style=" width: 400px ; height :600px;">
                    <img src="foto/home.jpg" style="outline: 2px #999595 solid;">
                    <div class="desc"> <h3>Sigurimi i Shtepisë</h3>
-                <p id=text1">Sigurimi i shtepise tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe në shtetet fqinje.
+                <p id=text1">Sigurimi i shtepise tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.
                 Siguroni Pronën tuaj nga humbjet, dëmtimet ose shkatërrimet
                 e pasurisë në mënyrë të paparashikuar dhe aksidentale
                 si pasojë e: zjarrit, rrufesë, eksplozionit, përplasjes apo rënies së fluturakeve.
@@ -51,10 +51,9 @@
          <div class="gallery" style=" width: 400px ; height :600px;">
                    <img src="foto/baby.jpg" style="outline: 2px #999595 solid;">
                    <div class="desc"> <h3>Sigurimi i Fëmijës tuaj</h3>
-                <p id=text1">Sigurimi i femijes tuaj eshte nje
-                    pergjegjesi e cila gjendet ne kompanine tone
-                    me qmimet me kualitative ne tregun tone,
-                    si dhe në shtetet fqinje. Asnjëri nuk planifikon
+                <p id=text1">Sigurimi i femijes tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje. Asnjëri nuk planifikon
                     të  sëmuret apo lëndohet, por shumë njerëz në
                     disa raste kanë nevojë për kujdes mjekësor.
                     Sigurimi shëndetësor në PRIOSIG ju ndihmon
@@ -66,9 +65,9 @@
          <div class="gallery" style=" width: 400px ; height :600px;">
                    <img src="foto/hospital.jpg" style="outline: 2px #999595 solid;">
                    <div class="desc"> <h3>Sigurimi i Spitalit</h3>
-                <p id=text1">Sigurimi i spitalit eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe në shtetet fqinje.
+                <p id=text1">Sigurimi i spitalit &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.
                  Asnjëri nuk planifikon
                     të  sëmuret apo lëndohet, por shumë njerëz në
                     disa raste kanë nevojë për kujdes mjekësor.
@@ -81,9 +80,9 @@
         <div class="gallery" style=" width: 400px ; height :600px;">
                    <img src="foto/mercedes.jpg" style="outline: 2px #999595 solid;">
                    <div class="desc"> <h3>Sigurimi i Makines</h3>
-                <p id=text1">Sigurimi i makines tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe në shtetet fqinje.
+                <p id=text1">Sigurimi i makines tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.
                 Shumë prej nesh kanë nevojë për automjete për të mundësuar
                 shkuarjen nga një vend në tjetrin, kështu që të gjithë
                 e dimë se sa mund të jenë të dobishëm, si dhe duke
@@ -98,9 +97,9 @@
         <div class="gallery" style=" width: 400px ; height :600px;">
                    <img src="foto/truck.jpg" style="outline: 2px #999595 solid;">
                    <div class="desc"> <h3>Sigurimi i Makinave të rënda</h3>
-                <p id=text1">Sigurimi i kamionit tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe në shtetet fqinje.
+                <p id=text1">Sigurimi i kamionit tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.
                 Shumë prej nesh kanë nevojë për automjete për të mundësuar
                 shkuarjen nga një vend në tjetrin, kështu që të gjithë
                 e dimë se sa mund të jenë të dobishëm, si dhe duke
@@ -116,9 +115,9 @@
         <div class="gallery" style=" width: 400px ; height :600px;">
                    <img src="foto/camera.jpg" style="outline: 2px #999595 solid;">
                    <div class="desc"> <h3>Sigurimi i Pronës tuaj</h3>
-                <p id=text1">Sigurimi i pronës tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe në shtetet fqinje.
+                <p id=text1">Sigurimi i pronës tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.
                 Siguroni Pronën tuaj nga humbjet, dëmtimet ose shkatërrimet
                 e pasurisë në mënyrë të paparashikuar dhe aksidentale
                 si pasojë e: zjarrit, rrufesë, eksplozionit, përplasjes apo rënies së fluturakeve.
