--- a/faqet-tjera/animacionet.html
+++ b/faqet-tjera/animacionet.html
@@ -118,7 +118,7 @@ function drop(ev) {
             me barriera t&euml; m&euml;dha, por si rezultat i pun&euml;s s&euml; palodhshme
             suksesi ishte i pashmangsh&euml;m. P&euml;r realizimin e q&euml;llimit
             t&euml; tij, z.Rrahmani p&euml;rcaktoi objektiva t&euml; qarta dhe p&euml;r
-            k&euml;t&euml; si objektiv kryesor ai parasheh investimin n&euml; personel. 
+            k&euml;t&euml; n&euml; &ccedil;do objektiv kryesor ai parasheh investimin n&euml; personel. 
             P&euml;r t&euml; pun&euml;tor&euml;t jan&euml; aset (pasuri) e nd&euml;rmarrjes dhe jo veg&euml;l e saj. 
             Fal&euml; seriozitetit dhe profesionalizmit n&euml; l&euml;min e sigurimeve q&euml;
             kishin personeli i zgjedhur i kompanis&euml; t&euml; cil&euml;t p&euml;rpiluan 
@@ -127,7 +127,7 @@ function drop(ev) {
             dhe cil&euml;sohej si kompani q&euml; reflekton besueshm&euml;ri, q&euml;ndrueshm&euml;ri dhe 
             partneritet afatgjat&euml; me klient&euml;t e saj. N&euml; shtator t&euml; vitit 2010 kompania
             e sigurimeve PROSIG b&euml;het an&euml;tare e kompanis&euml; s&euml; njohur 
-            austriake "GRAWE GROUP - Grazer Wechselseitige Versicherung Aktiengesellchaft", meq&euml;
+            austriake "GRAWE&Ccedil; GROUP - Grazer Wechselseitige Versicherung Aktiengesellchaft", meq&euml;
             rast u kuror&euml;zua edhe partneriteti n&euml; mes t&euml; dy kompanive.
             "GRAWE Group" &euml;sht&euml; kompani e cila ka tradit&euml; 180 vje&ccedil;are n&euml; 
             fush&euml;n e sigurimeve dhe ka nj&euml; shtrirje n&euml; 13 shtete t&euml; Evrop&euml;s
@@ -210,7 +210,7 @@ function Ora() {
   x.innerHTML = h + ":" + m + ":" + s;
 }
       </script>
-      <div id="paraqit">Klikoni per te rreshqitur posht kete panel</div>
+      <div id="paraqit">Klikoni p&euml;r t&euml; rreshqitur posht&euml; k&euml;t&euml; panel</div>
      <div id="paneli">PROSIG</div>
              <br>
             <div style="height: 70px;width:1330px;position:absolute;margin-left: 10px;background-color:whitesmoke;border: dotted black 1px;">
@@ -235,9 +235,9 @@ function Ora() {
    
     <div class="scale"><div class="skew"></div></div>
             
-            <div class="rotateX">Divi i rrotulluar 50 shkalle sipas X</div>
+            <div class="rotateX">Divi i rrotulluar 50 shkall&euml; sipas X</div>
            
-            <div class="translate3D">Divi i rrotulluar ne 3D</div>
+            <div class="translate3D">Divi i rrotulluar n&euml; 3D</div>
             </div>
            <div class="right">
                <br>
