--- a/faqet-tjera/kontakti.html
+++ b/faqet-tjera/kontakti.html
@@ -34,7 +34,7 @@
         <div class="left1">
             <h3 style="margin: 21px; font-family: Sans-serif; border-bottom:1px black solid;">Kontakti</h3>
             <pre style="font-family: Garamond">
-    Rr. Hasan Prishtina nr 5, Prishtinë, Kosovë
+    Rr. Hasan Prishtina nr 5, Prishtin&euml;, Kosov&euml;
 
     office@prosig.com
 
@@ -44,19 +44,19 @@
 
     http://www.prosig.com
             </pre>
-            <h3 style="margin: 21px; font-family: Sans-serif; border-bottom:1px black solid;">Orët e punës në zyret e shitjes</h3>
+            <h3 style="margin: 21px; font-family: Sans-serif; border-bottom:1px black solid;">Or&euml;t e pun&euml;s n&euml; zyret e shitjes</h3>
             <pre id="hideshow" style="font-family: Garamond;">
-    E Hënë - E Premte: 08 - 16
+    E H&euml;n&euml; - E Premte: 08 - 16
 
-    E Shtunë: 08 - 12
+    E Shtun&euml;: 08 - 12
 
     <mark>E Diel: Mbyllur</mark>
             </pre>
-            <h3 style="margin: 21px; font-family: Sans-serif; border-bottom:1px black solid;">Orët e punës në administratë</h3>
+            <h3 style="margin: 21px; font-family: Sans-serif; border-bottom:1px black solid;">Or&euml;t e pun&euml;s n&euml; administrat&euml;</h3>
             <address style="font-family: Garamond; padding-left: 20px;">
-    E Hënë - E Premte: 08 - 16
+    E H&euml;n&euml; - E Premte: 08 - 16
     <br>
-   <mark> E Shtunë - E Diel: Mbyllur</mark>
+   <mark> E Shtun&euml; - E Diel: Mbyllur</mark>
             </address>
             <button id="hide">Hide</button>
             <button id="show">Show</button>
@@ -101,7 +101,7 @@
    <div class="fdiv">
  <div class="fdiv1">
      <br>
-     <h3 align="center" id="dh3">Shtetet te cilat mund ti sigurojm&euml;</h3>
+     <h3 align="center" id="dh3">Shtetet t&euml; cilat mund t'i sigurojm&euml;</h3>
      <hr>
      <h5 align="center">Kosov&euml</h5>
      <h5 align="center">Maqedoni</h5>
