--- a/index.html
+++ b/index.html
@@ -51,48 +51,48 @@
              <div class="right">
                  <div>
                      <h2>Kompani e Sigurimeve PROSIG</h2>
-                     <p class="paragrafi">Sigurim ideal për shëndetin tuaj në rast se 
-                         ju keni planifikuar të vizitoni vendet e 
-                         Bashkimit Europian apo cilit do vend tjetër në botë.<br><br>
-                         Sigurimi i shëndetit në udhëtim do të ju mbulojë 
-                         sigurimin e shëndetit gjatë qëndrimit tuaj jashtë 
-                         vendit.<br><br> Në rast të ndonjë sëmundje si dhe do të mbulojë 
-                         maksimalisht deri në limitin e sigurimit tuaj.</p>
+                     <p class="paragrafi">Sigurim ideal p&euml;r sh&euml;ndetin tuaj n&euml; rast se 
+                         ju keni planifikuar t&euml; vizitoni vendet e 
+                         Bashkimit Europian apo cilit do vend tjet&euml;r n&euml; bot&euml;.<br><br>
+                         Sigurimi i sh&euml;ndetit n&euml; udh&euml;tim do t&euml; ju mbuloj&euml; 
+                         sigurimin e sh&euml;ndetit gjat&euml; q&euml;ndrimit tuaj jasht&euml; 
+                         vendit.<br><br> N&euml; rast t&euml; ndonj&euml; s&euml;mundje si dhe do t&euml; mbuloj&euml; 
+                         maksimalisht deri n&euml; limitin e sigurimit tuaj.</p>
                  </div>
              </div>
          </div>
     <div style="background-color: #f0efef;">                    
     <div class="psh1" align="left">
-        </br></br><h class="hnje">  KETU DO TE GJENI ME TE REJAT E KOMPANISE PROSIG.</h>
+        </br></br><h class="hnje">  K&Euml;TU DO T&Euml; GJENI ME T&Euml; REJAT E KOMPANIS&Euml; PROSIG.</h>
     </div>
     <div class="container1" align="left">
         <table bgcolor: #33302e; class="tabela" style="margin-left:-20px;"> 
             <td style="padding: 1px;">
                 <div class="gallery" style=" width: 400px ; height :500px;">
                    <img src="faqet-tjera/foto/home.jpg" style="outline: 2px #999595 solid;">
-                   <div class="desc"> <h3>Sigurimi i Shtepisë</h3>
-                <p id=text1">Sigurimi i shtepise tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>
+                   <div class="desc"> <h3>Sigurimi i Shtepis&euml;</h3>
+                <p id=text1">Sigurimi i shtepise tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">P&euml;r t&euml; lexuar m&euml; shum&euml; regjistrohu &raquo;</a></p>
             </div>
                 </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="faqet-tjera/foto/baby.jpg" style="outline: 2px #999595 solid;">
-            <div class="desc"> <h3>Sigurimi i Fëmijës tuaj</h3>
-             <p id="text1">Sigurimi i femijes tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
-                 <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>          
+            <div class="desc"> <h3>Sigurimi i F&euml;mij&euml;s tuaj</h3>
+             <p id="text1">Sigurimi i femijes tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.</p>
+                 <p style="text-align: right;"><a href="faqet-tjera/login.html">P&euml;r t&euml; lexuar m&euml; shum&euml; regjistrohu &raquo;</a></p>          
              </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="faqet-tjera/foto/hospital.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i Spitalit</h3>
-            <p id="text1">Sigurimi i spitalit tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>          
+            <p id="text1">Sigurimi i spitalit tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">P&euml;r t&euml; lexuar m&euml; shum&euml; regjistrohu &raquo;</a></p>          
             </div>
         </div>
             </td>
@@ -103,28 +103,28 @@
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="faqet-tjera/foto/mercedes.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i Makines</h3>
-            <p id="text1">Sigurimi i vetures tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>         
+            <p id="text1">Sigurimi i vetures tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">P&euml;r t&euml; lexuar m&euml; shum&euml; regjistrohu &raquo;</a></p>         
             </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="faqet-tjera/foto/truck.jpg" style="outline: 2px #999595 solid;">
-            <div class="desc"> <h3>Sigurimi i Makinave të rënda</h3>
-             <p id="text1">Sigurimi i kamionit tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>           
+            <div class="desc"> <h3>Sigurimi i Makinave t&euml; r&euml;nda</h3>
+             <p id="text1">Sigurimi i kamionit tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">P&euml;r t&euml; lexuar m&euml; shum&euml; regjistrohu &raquo;</a></p>           
              </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
             <img src="faqet-tjera/foto/camera.jpg" style="outline: 2px #999595 solid;">
-            <div class="desc"> <h3>Sigurimi i Pronës tuaj</h3>
-             <p id="text1">Sigurimi i vendit tuaj eshte nje pergjegjesi
-                e cila gjendet ne kompanine tone me qmimet me 
-                kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>           
+            <div class="desc"> <h3>Sigurimi i Pron&euml;s tuaj</h3>
+             <p id="text1">Sigurimi i vendit tuaj &euml;sht&euml; nj&euml; p&euml;rgjegj&euml;si
+                e cila gjendet n&euml; kompanin&euml; ton&euml; me qmimet me 
+                kualitative n&euml; tregun ton&euml;, si dhe n&euml; shtetet fqinje.</p>
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">P&euml;r t&euml; lexuar m&euml; shum&euml; regjistrohu &raquo;</a></p>           
              </div>
         </div>
             </td> 
@@ -170,7 +170,7 @@
  </div>
                
  <div class="fdiv1">
-     <h3 align="center" id="dh3">Shtetet ne Europe</h3>
+     <h3 align="center" id="dh3">Shtetet n&euml; Europe</h3>
      <hr>
      <h5 align="center">GJERMANI</h5>
      <h5 align="center">AUSTRI</h5>
@@ -180,7 +180,7 @@
      <h5 align="center">SLLOVENI</h5>
  </div>
  <div class="fdiv1">
-     <h3 align="center" id="dh3">Qytetet ne Kosove</h3>
+     <h3 align="center" id="dh3">Qytetet n&euml; Kosove</h3>
      <hr>
      <h5 align="center">PRISHTINE</h5>
      <h5 align="center">SKENDERAJ</h5>
@@ -192,7 +192,7 @@
  <div class="fdiv1">
      <h3 align="center" id="dh3">Kontakti</h3>
      <hr>
-     <h5 align="center"> Rr. Hasan Prishtina nr 5, Prishtinë, Kosovë</h5>
+     <h5 align="center"> Rr. Hasan Prishtina nr 5, Prishtin&euml;, Kosov&euml;</h5>
      <h5 align="center">office@prosig.com</h5>
      <h5 align="center">038 111 222</h5>
      <h5 align="center">http://www.prosig.com</h5>
