--- a/faqet-tjera/kontakti.html
+++ b/faqet-tjera/kontakti.html
@@ -69,7 +69,7 @@
                            <td><a href="mailto:gentianve@gmail.com"><img src="foto/email_32.png" title="Email"></a></td>
                        </tr>
                    </table>
-             <a href="Game.html" target="_blank" title="Enigma HTML5">Kliko ketu per te luajtur</a>
+             <a href="Game.html" target="_blank" title="Enigma HTML5">Kliko k&euml;tu p&euml;r t&euml; luajtur</a>
         </div>
         <div class="right1">
             <div class="divaudio">
