--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                      <a href="https://www.twitter.com" ><img src="faqet-tjera/foto/twitterlogo.jpg" height="100" width="115" title="Twitter" class="rrjetetSociale" id="rrjetetSociale3"></a>        
                 </div>
                 <div style="width:90%;height :90px;">       
-                     <label align="left" style="color: #ffffff; opacity:0.4; font-size: 18px;margin: 15px 0px 0px 27px;">Subscribe Per Email:</label><br />
+                     <label align="left" style="color: #ffffff; opacity:0.4; font-size: 18px;margin: 15px 0px 0px 27px;">Logout with Email:</label><br />
                      <input type="text" name="title" size="48" placeholder="Enter your email here..." style="margin-left: 27px;  border :1px white solid ;" />
                      <input id="color1" type="submit" onclick="window.location.href='login.html'" value="Logout" size="20" style=" border:1px white solid ;color :green;background: #33302e;"/>    
                 </div>
